# gitguard

./: .gitignore  CHANGELOG.md  README.md  ROUND_LOG.md  pyproject.toml
src/gitguard/: __init__.py  audit.py  cache.py  ci.py  cli.py  config.py  entropy.py  escalation.py  filters.py  git.py  ignorefile.py  models.py  parallel.py  report.py  suggestions.py  suppression.py
src/gitguard/formatters/: __init__.py  json_fmt.py  sarif.py  text.py
src/gitguard/hooks/: __init__.py  installer.py
src/gitguard/rules/: __init__.py  builtin.py  extended.py  loader.py  manager.py  tester.py
src/gitguard/scanners/: __init__.py  baseline_scanner.py  content_scanner.py  diff_scanner.py  file_scanner.py  history_scanner.py
tests/: test_audit.py  test_baseline_scanner.py  test_builtin_rules.py  test_cache.py  test_ci.py  test_cli.py  test_cli_extended.py  test_config.py  test_content_scanner.py  test_diff_scanner.py  test_edge_cases.py  test_entropy.py  test_escalation.py  test_extended_rules.py  test_file_scanner.py  test_filters.py  test_formatters.py  test_git.py  test_history_scanner.py  test_hooks.py  test_ignorefile.py  test_integration.py  test_models.py  test_parallel.py  test_report.py  test_rule_coverage.py  test_rule_loader.py  test_rule_manager.py  test_rule_tester.py  test_suggestions.py  test_suppression.py
